fixed overflow bug with the gameWrapper

--- a/Snippets/Simplified Panel Area/SimplifiedPanelArea.css
+++ b/Snippets/Simplified Panel Area/SimplifiedPanelArea.css
@@ -150,6 +150,9 @@
     }
   }
 }
+.body__5dec7 {
+  width: 100%;
+}
 .gameWrapper__5dec7, .gameWrapper__8c6c2 {
   gap: var(--space-8);
 }
